# tg-bot-dict

./: .gitignore  README.md  db.py  dictionaries.py  main.py  pyproject.toml
