[project]
name = "tg-bot-dict"
version = "0.1.0"
description = "Telegram bot for learning new English words"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.12",
    "psutil>=7.0.0",
    "python-dotenv>=1.1.0",
    "python-telegram-bot>=22.1",
    "requests>=2.32.3",
    "ruff>=0.11.12",
    "uvicorn>=0.34.2",
]


[tool.ruff]
# Set the maximum line length to 79.
line-length = 80

[tool.ruff.lint]
# Add the `line-too-long` rule to the enforced rule set.
extend-select = ["E501"]
